# bft

./: .gitignore  CMakeLists.txt  readme.md  test.sh  todo.md
src/: asc.cpp  asc.hpp  cli.cpp  cli.hpp  codegen.hpp  colours.h  err_codes.h  log.hpp  main.cpp  parser.cpp  parser.hpp
src/codegen/: ada.cpp  ada.hpp  c.cpp  c.hpp  codegen.cpp  codegen.hpp  fortran.cpp  fortran.hpp  js.cpp  js.hpp  rust.cpp  rust.hpp
test/: hworld.bf
test/ada/: test.sh
test/c/: hworld  hworld.c  test.sh
test/fortran/: test.sh
test/js/: hworld.js  test.sh
test/optimize/: benchmark.bf  bf_1.bf  bf_2.bf  test.sh
test/rust/: test.sh
tools/: build.sh  test.sh
